Name:
    egw2fbox.pl

History:
                                      0.08.01 2011-05-05 Kai Ellinger <coding@blicke.de>
                                            Documentation:
                                            - Finished API docs

                                      0.08.00 2011-04-05 Kai Ellinger <coding@blicke.de>
                                            Documentation:
                                            - Started implementing the documentation via perlpod
                                            - Implemented command line options:
                                              [--version] [--help] [-h] [-?] [--man] [--changelog]

                                      0.07.01 2011-03-30 Kai Ellinger <coding@blicke.de>
                                            Round Cube DB:
                                            - Fixed bug that not set value for 'email', 'name', 'firstname' or 'surname' 
                                              column causes SQL errors. 'email', 'name', 'firstname' will never be NULL
                                              due to the implementation. But 'surname' might.
                                            - Checking $userId, $changed and $sth as well
                                            - Don't let the whole script fail if $userId or $sth is NULL. Only roll back 
                                              the Round Cube DB transaction!

                                      0.07.00 2011-03-29 Kai Ellinger <coding@blicke.de>
                                            - Lazy Update implemented
                                            - Implemented dedicated EGW user lists FBOX_EGW_ADDRBOOK_OWNERS, RCUBE_EGW_ADDRBOOK_OWNERS, MUTT_EGW_ADDRBOOK_OWNERS
                                              in addition to already existing global EGW user list EGW_ADDRBOOK_OWNERS

                                      0.06.00 2011-03-28 Kai Ellinger <coding@blicke.de>